<resources>
    <string name="app_name">PicuP</string>

    <string name="search_hint">Search Hint</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>

    <string name="forgot_password_label">Forgot Password?</string>
    <string name="facebook_label">f</string>
    <string name="linkedin_label">in</string>
    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="new_to_picup_label">New to PicuP?</string>
    <string name="signup_label">Sign Up</string>
    <string name="login_label">Login</string>
    <string name="or_signin_with_label">Or Sign in With</string>
    <string name="authentication_error_message">User Name and/or password is incorrect.\nPlease try again.</string>
    <string name="failed_authentication_message">Failed authentication message description</string>
    <string name="forgot_password_description">Forgot Password?</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="logout_label">Logout</string>
    <string name="phone_invalid_input">Invalid Phone Number, Please check.</string>

    <!-- TODO: Remove or change this placeholder type -->
    <string name="cup_filling_message">Checking your credentials...</string>
    <string name="calls_tab_title">Calls</string>
    <string name="keypad_tab_title">Keypad</string>
    <string name="contacts_tab_title">Contacts</string>
    <string name="call_from_label">Call from:</string>
    <string name="contact_name_label">Contact Name</string>
    <string name="contact_type_label">Contact Type</string>
    <string name="phone_type_label">Phone Type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call_label">Call</string>
    <string name="fullname_label">Full Name</string>
    <string name="email_label">Email Address</string>
    <string name="cancel_label">Cancel</string>
    <string name="save_label">Save</string>
    <string name="cancel_cap_label">CANCEL</string>
    <string name="save_cap_label">SAVE</string>
    <string name="new_contact_label">New Contact</string>
    <string name="company_name_label">Company Name</string>
    <string name="call_from_spinner_prompt">Calls for PicuP number</string>
    <string name="call_from_type_label">Call From Type</string>
    <string name="make_outbound_call_from_label">Make outbound call from</string>
    <string name="search_result_count_label">Search Count</string>
    <string name="call_to_label">Call to</string>
    <string name="sign_in_cap_label">SIGN IN</string>
    <string name="calling_label">Calling...</string>
    <string name="update_existing_contact_label">Update Existing</string>
    <string name="email_text">Email</string>
    <string name="retrieve_existing_photo_label">Retrieve Existing Photo</string>
    <string name="create_new_photo_label">Create New Photo</string>
    <string name="contact_cap_label">CONTACT</string>
    <string name="calls_cap_label">CALLS</string>
    <string name="additional_numbers_label">Additional Numbers</string>
    <string name="additional_info_label">Additional Info</string>
    <string name="missing_label">Missing</string>
    <string name="edit_contact_label">Edit Contact</string>
    <string name="lastname_label">Last Name</string>
    <string name="firstname_label">First Name</string>
    <string name="ok_cap_label">OK</string>
    <string name="delete_cap_label">DELETE</string>
    <string name="discard_changes_title">Discard Changes</string>
    <string name="discard_changes_message">All changes will be discarded.</string>
    <string name="add_to_contacts_label">+ Add to contacts</string>
    <string name="add_to_exist_contact_label">Update Existing</string>
    <string name="delete_contact_title">Delete Contact</string>
    <string name="delete_contact_message">This contact will be deleted permanently from both your contact device list and this app</string>
    <string name="delete_selected_message">Selected contact(s) will be deleted permanently from both your contact device list and this app</string>
    <string name="add_additional_number_label">Add Additional Number</string>
    <string name="change_additional_number_label">Change Additional Number</string>
    <string name="add_cap_label">ADD</string>
    <string name="change_cap_label">CHANGE</string>
    <string name="add_additional_email_label">Add Additional Email</string>
    <string name="change_additional_email_label">Change Additional Email</string>
    <string name="email_type_label">Email Type</string>
    <string name="mobile_type_label">Mobile</string>
    <string name="home_type_label">Home</string>
    <string name="personal_type_label">Personal</string>
    <string name="office_type_label">Office</string>
    <string name="work_type_label">Work</string>
    <string name="fax_type_label">Fax</string>
    <string name="other_type_label">Other</string>
    <string name="query_hint_label">Who are you looking for?</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="done_cap_label">DONE</string>
    <string name="selected_label">Selected</string>
    <string name="checking_your_credential">Checking your credential...</string>
    <string name="company_calls_label">Company Calls</string>
    <string name="department_calls_label">Department Calls</string>
    <string name="your_calls_label">Your Calls</string>
    <string name="view_calls_for_label">View Calls for:</string>
    <string name="view_calls_for_number_label">View Calls for number</string>
    <string name="all_numbers_label">All Numbers</string>
    <string name="call_empty_label">No Calls History yet\nTo place a PicuP call, go the the dial pad/contacts,\nchoose the contact you want to call to and tap on</string>
    <string name="read_contacts_permission_explanation">PicuP needs access to your Contacts app, so it can incorporate with contacts data.</string>
    <string name="approve_your_number_label">Approve your mobile number</string>
    <string name="required_number_label">Required to allow PicuP to make calls on this app</string>
    <string name="approve_label">Approve</string>
    <string name="error_description">You will be logged out of PicuP. Please login and try again.</string>
    <string name="oops_error_title">Oops! Something went wrong!</string>
    <string name="network_error_title">Network Error</string>
    <string name="account_suspended_error_title">Account is suspended</string>
    <string name="account_suspended_error_message">"You can not make outbound calls at this time since you have NO MORE MIN LEFT. Reactivate your account by visiting www.picup.com"</string>
    <string name="reactivate_button">Reactivate</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log">Logcat</string>
    <string name="title_about">About</string>

    <string name="check">&#42;</string>

    <string name="keypad_matching_contact_1_more">, and 1 other</string>
    <string name="keypad_matching_contact_more_part_1">, and\u0020</string>
    <string name="keypad_matching_contact_more_part_2">\u0020others</string>
    <string name="dialog_menu_create_contact">Create Contact</string>
    <string name="dialog_menu_update_existing">Update Existing</string>
    <string name="unknown_label">Unknown</string>
    <string name="label_caller">"Caller: "</string>
    <string name="outbound_unavailable_title">Unavailable to make calls</string>
    <string name="outbound_unavailable_message">We are sorry for any inconvenience! PicUP app is currently unavailable to make outbound calls. Please try again in a few minutes.</string>
    <string name="menu_t_and_c"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="title_terms"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="notification_error_ssl_cert_invalid">SSL Certificate Error</string>
    <string name="network_error_message">Please check your network connection and try again.</string>
    <string name="t_c_accept">I Accept</string>
</resources>
