<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/nav_about_the_app"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about"/>
        <item
            android:id="@+id/nav_t_and_c"
            android:icon="@drawable/ic_t_and_c"
            android:title="@string/menu_t_and_c"/>
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/cup_1"
            android:title="@string/menu_log"
            android:visible="false"/>
    </group>
</menu>
