<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    tools:context="com.picup.calling.dialog.AdditionalNumberDialog">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/add_additional_number_label"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/phone_type_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/mobile_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/mobile_type_label" />

        <RadioButton
            android:id="@+id/home_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/home_type_label" />

        <RadioButton
            android:id="@+id/office_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/office_type_label" />

        <RadioButton
            android:id="@+id/fax_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/fax_type_label" />
    </RadioGroup>

    <EditText
        android:id="@+id/phone_number_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number_label"
        android:inputType="phone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/add_button"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:text="@string/cancel_cap_label"
            android:textColor="@color/mainPurple" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:gravity="right|center_vertical"
            android:text="@string/add_cap_label"
            android:textColor="@color/mainPurple" />
    </RelativeLayout>
</LinearLayout>
