<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/north_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/error_icon_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_oops" />

        <TextView
            android:id="@+id/error_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/error_icon_imageview"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/oops_error_title"
            android:textColor="@color/errorRed"
            android:textSize="@dimen/text_size_16" />

    </RelativeLayout>

    <TextView
        android:id="@+id/error_description_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/north_layout"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:gravity="fill_horizontal"
        android:text="@string/error_description"
        android:textSize="@dimen/text_size_16" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/error_description_textview"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:textAllCaps="true"
            android:text="@string/cancel_label"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/text_size_16"
            android:visibility="invisible"/>


        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:textAllCaps="true"
            android:text="@string/login_label"
            android:textColor="@color/mainPurple"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>
</RelativeLayout>